# yaaf

./: .editorconfig  .rustfmt.toml  Cargo.toml  README.md
.github/actions-rs/: grcov.yml
.github/workflows/: audit.yaml  ci.yaml
macros/: Cargo.toml
macros/src/: lib.rs
src/: actor.rs  channel.rs  context.rs  error.rs  handler.rs  lib.rs  mailbox.rs  message.rs  prelude.rs  publisher.rs  router.rs  source.rs  system.rs
tests/: clone_address_test.rs  compile_fail_test.rs  multiple_handler_test.rs  simple_pubsub_test.rs  simple_tell_test.rs
tests/compile_fail/: missing_handler.rs  missing_handler.stderr  missing_handler_attribute.rs  missing_handler_attribute.stderr  missing_handler_for_tell.rs  missing_handler_for_tell.stderr  missing_publisher_attribute.rs  missing_publisher_attribute.stderr  no_handler_attribute.rs  no_handler_attribute.stderr
