[package]
name = "yaaf"
description = "Yet Another Actor Framework"
version = "0.1.0"

edition = "2018"
license = "Apache-2.0"
authors = ["Mark Burnett <mark.m.burnett@gmail.com>"]
repository = "https://github.com/mark-burnett/yaaf/"

categories = ["asynchronous", "concurrency"]
keywords = ["actor", "async", "tokio"]

[dependencies]
async-trait = "0.1"
dyn-clone = "1"
thiserror = "1"
tokio = { features = ["macros", "rt", "sync"], version = "1" }
yaaf-macros = { path = "macros", version = "0.1.0" }

[dev-dependencies]
tokio = { features = ["rt-multi-thread"], version = "1" }
trybuild = "1"

[workspace]
members = ["macros"]
