[package]
name = "yaaf-macros"
description = "Procedural macros for using YAAF"
version = "0.1.0"

edition = "2018"
license = "Apache-2.0"
authors = ["Mark Burnett <mark.m.burnett@gmail.com>"]
repository = "https://github.com/mark-burnett/yaaf/"

categories = ["asynchronous", "concurrency"]
keywords = ["actor", "async", "tokio", "yaaf"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { features = ["full", "parsing"], version = "1.0" }
